force-app/main/default/objects/Account/fields/Maximo_de_proyectos_activos__c.field-meta.xml
<CustomField>
    <fullName>Maximo_de_proyectos_activos__c</fullName>
    <label>Maximo de proyectos activos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>