force-app/main/default/objects/Account/fields/Presupuesto_promedio__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_promedio__c</fullName>
    <label>Presupuesto promedio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>