force-app/main/default/objects/Account/fields/Presupuesto_Total__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_Total__c</fullName>
    <label>Presupuesto Total</label>
    <summarizedField>Proyecto__c.Presupuesto__c</summarizedField>
    <summaryForeignKey>Proyecto__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>