force-app/main/default/objects/Account/fields/Total_Recursos__c.field-meta.xml
<CustomField>
    <fullName>Total_Recursos__c</fullName>
    <label>Total Recursos</label>
    <summarizedField>Proyecto__c.Numero_de_Recursos__c</summarizedField>
    <summaryForeignKey>Proyecto__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>